<resources>
    <string name="app_name">跟我一起学Csfsdgsdgsg</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget">忘記密码</string>
    <string name="hintName">请输入用户名</string>
    <string name="hintPas">请输入密码</string>
    <string name="hintTel">请输入手机号码</string>
    <string name="hintTelInfor">请输入注册时的手机号</string>
    <string name="hintCodeInfor">请输入获取到的验证码</string>
    <string name="s_reset">请输入新的登录密码</string>
    <string name="s_reset1">请确认密码</string>
    <string name="_86">+86</string>
    <string name="getCode">获取验证码</string>
    <string name="submit">提交</string>
    <string name="remeber_psw">记住密码</string>
    <string name="tel_login">手机号码登录</string>
    <string name="search_hint">搜索课程</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
