<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"



    android:orientation="vertical"
    tools:context="activity.MainActivity">
    <include
        android:id="@+id/includes"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        layout="@layout/top_back"
        ></include>


    <LinearLayout
        android:id="@+id/line11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/hintName"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
            android:maxLength="10"
            android:maxLines="1" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/line22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/hintPas"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/hintTel"
            android:inputType="number"

            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:gravity="center"

        >


        <Button

            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="on_register"


            android:text="@string/register" />


    </LinearLayout>


</LinearLayout>
