<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/set_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="afasfafsafsdfad.SetPswActivity">
    <include
        android:id="@+id/setpsw_include"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/top_back">

    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp">
        <EditText
            android:id="@+id/set_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/s_reset"
            android:gravity="left"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:maxLines="1"

            />
        <EditText
            android:id="@+id/set_psw1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/s_reset1"
            android:gravity="left"
            android:textSize="20sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/set_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="s_onclick"
                android:layout_marginLeft="15dp"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:background="@color/colorPrimary"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:onClick="back_onclick"
                android:text="返回登录界面"
                android:textColor="#ffffff"
                android:background="@color/colorPrimary"
                />
        </RelativeLayout>


    </LinearLayout>



</LinearLayout>
